# friday-clustering-bond-etfs

./: .gitignore  HANDOFF.md  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  constants.py  environment.yml  pyproject.toml  requirements.txt
audit/: PROVENANCE_REPORT.md  README.md  REPORT.md  build_manifest.py  check_provenance.py  claims_manifest.json  code_provenance_manifest.json  compare.py  extract_claims.py  lookup_outputs.py  regenerate_table1.py  report.py  run.sh  tolerances.json
code/: 01_fetch_nav_prices.py  02_fetch_inav_factsheets.py  03_compute_premium.py  04_hcug_test.py  05_wsas_asymmetry.py  06_msgarch_via_rpy2.py  07_cross_sectional_ols.py  08_shares_outstanding_flow.py  09_make_figures.py  10_audit_inputs.py  11_did_t1.py  12_ou_t1_lrt.py  13_baseline_simulation.py  14_mechanism_roadmap.py
code/_vendored_msgarch_lee2025/: LICENSE  PROVENANCE.md  __init__.py  em_core.py  em_core_patched.py  params.py  (+2 more)
data/: fund_metadata.csv
docs/: ETF_LIST.md  MATH_TO_CODE_MAP.md  REPLICATION_NOTES.md
output/: did_t1_group_summary.csv  did_t1_per_fund.csv  did_t1_results.csv  did_t1_summary.json  ou_t1_lrt_per_fund.csv  ou_t1_lrt_summary.json
paper/: Makefile  frl_paper.tex  frl_references.bib
tests/: test_bh_fdr.py  test_did.py  test_hcug.py  test_ols_hc3.py  test_ou_model.py  test_ridge.py  test_wsas.py
utils/: __init__.py  bootstrap.py  calendar.py  diagnostics.py  did.py  io.py  multiple_testing.py  ou_model.py  perm_importance.py  permutation.py  regression.py  spearman.py  wild_cluster.py  wsas.py
verification/: appendix_F_verification.py
